--- a/backmatter.tex
+++ b/backmatter.tex
@@ -24,6 +24,16 @@
 \acro{MSSM}[MSSM]{Minimal Supersymmetric standard model}
 \acro{SUSY}[SUSY]{Supersymmetry}
 \acro{2HDM}[2HDM]{Two Higgs Doublet Model}
+\acro{ECAL}[ECAL]{Electromagnetic calorimeter}
+\acro{HCAL}[HCAL]{Hadronic calorimeter}
+\acro{CSC}[CSC]{Cathode strip chambers}
+\acro{RPC}[RPC]{Resistive plate chambers}
+\acro{DT}[DT]{Drift tubes}
+\acro{HF}[HF]{Hadronic forward}
+\acro{TIB}[TIB]{Tracker Inner Barrel}
+\acro{TID}[TID]{Tracker Inner Disk}
+\acro{TOB}[TOB]{Tracker Outer Barrel}
+\acro{TEC}[TEC]{Tracker EndCap}
 \end{acronym}
 
 
