--- a/preamble.tex
+++ b/preamble.tex
@@ -88,6 +88,7 @@
 \newcommand{\mHplus}{$m_{\PHiggs^{+}}$}
 \newcommand{\mh}{$m_{\PHiggslight}$}
 \newcommand{\pT}{$p_{\text{T}}$}
+\newcommand{\ET}{$E_{\text{T}}$}
 \newcommand{\mT}{$m_{\text{T}}$}
 \newcommand{\MET}{$E_{\text{T}}^{\text{miss}}$}
 \DeclareRobustCommand{\protonproton}{\Pproton\Pproton\xspace}
