--- a/backmatter.tex
+++ b/backmatter.tex
@@ -25,7 +25,7 @@
 \acro{SUSY}[SUSY]{Supersymmetry}
 \acro{2HDM}[2HDM]{Two Higgs Doublet Model}
 \acro{ECAL}[ECAL]{Electromagnetic calorimeter}
-\acro{HCAL}[HCAL]{Hadronic calorimeter}
+\acro{HCAL}[HCAL]{Hadron calorimeter}
 \acro{CSC}[CSC]{Cathode strip chambers}
 \acro{RPC}[RPC]{Resistive plate chambers}
 \acro{DT}[DT]{Drift tubes}
@@ -34,6 +34,12 @@
 \acro{TID}[TID]{Tracker Inner Disk}
 \acro{TOB}[TOB]{Tracker Outer Barrel}
 \acro{TEC}[TEC]{Tracker EndCap}
+\acro{EB}[EB]{ECAL Barrel}
+\acro{EE}[EE]{ECAL Endcaps}
+\acro{HB}[HB]{Hadron barrel calorimeter}
+\acro{HO}[HO]{Hadron outer calorimeter}
+\acro{HE}[HE]{Hadron endcap calorimeter}
+\acro{HF}[HF]{Hadron forward calorimeter}
 \end{acronym}
 
 
