More HCAL stuff

--- a/Detector/Detector.tex
+++ b/Detector/Detector.tex
@@ -321,12 +321,47 @@ of the detector \cite{cms-jinst}.}
 \end{center}
 \end{figure}
 
-The \ac{HB} is a sampling calorimeter made of brass absorber
-plates with 
+The \ac{HB} and \ac{HE} are sampling calorimeters made of brass absorber
+plates with tiles of plastic scintillator as the active material. The tiles 
+are $0.087 \times 0.087$ in $\eta-\phi$ for $|\eta|<1.6$ and $0.17\times0.17$ in $\eta-\phi$
+beyond this range.
+The light from each tile is collected with a wavelength-shifting fibre, 
+which is eventually read out using a hybrid photodiode. In the barrel, the \ac{HCAL}
+has a thickness of between 5.82 and 10.6 interaction lenghts, which is not 
+sufficient to identify for example late-starting showers. The \ac{HO}, sitting
+outside of the magnet and using the coil as an additional absorber, extends the 
+thickness to at least 11.8 interaction lenghts. 
+The active material again consists of plastic scintillator tiles which roughly
+map the granularity of the tiles in the \ac{HB}, read out by feeding the light
+to a hybrid photodiode via wavelength shifting fibres.
+%WTF: wavelength-shifting fibres
+
+The \ac{HF}, providing coverage in the very forward region, is 
+subjected to large radiation doses, requiring an extremely
+radiation hard active material. For this reason quartz
+fibres are used as active material. These fibres are embedded
+in the steel absorber structure. Charged particles from the
+shower initiated in the steel generate Cherenkov light in 
+the quartz fibres, which is read out by photomultiplier tubes.
+%Half of the fibres run over the full depth of the absorber
+%while the other half starts at a depth of 22 cm, this is
+%to distinguish electrons and photons (which deposit a large
+%fraction of their energy in the first 22cm) from hadrons.
+
+HCAL RESOLUTION!
+
 
 
 \subsection{Muon system}
 \label{sec:CMSLHC_CMS_muons}
+One of the main physics goals of the \ac{CMS} experiment
+at design was to search for $H\rightarrow ZZ\rightarrow 4\mu$ decays. Muons
+suffer less from radiative losses in the tracker material, which means the most accurate
+4-body mass can be constructed when searching for muon final states.
+After discovery of the Higgs boson, the ZZ channel remains important
+for Higgs measurements, while many \ac{BSM} searches make use 
+they 
+
 
 A cross-section of one quadrant of the detector, indicating
 the positions of the muon systems, is shown in figure \ref{fig:CMS_MuonSystem}.
