--- a/backmatter.tex
+++ b/backmatter.tex
@@ -29,7 +29,6 @@
 \acro{CSC}[CSC]{Cathode strip chambers}
 \acro{RPC}[RPC]{Resistive plate chambers}
 \acro{DT}[DT]{Drift tubes}
-\acro{HF}[HF]{Hadronic forward}
 \acro{TIB}[TIB]{Tracker Inner Barrel}
 \acro{TID}[TID]{Tracker Inner Disk}
 \acro{TOB}[TOB]{Tracker Outer Barrel}
@@ -40,6 +39,9 @@
 \acro{HO}[HO]{Hadron outer calorimeter}
 \acro{HE}[HE]{Hadron endcap calorimeter}
 \acro{HF}[HF]{Hadron forward calorimeter}
+\acro{BSM}[BSM]{Beyond the Standard Model}
+\acro{L1}[L1]{Level 1}
+\acro{HLT}[HLT]{High-level trigger}
 \end{acronym}
 
 
