--- a/backmatter.tex
+++ b/backmatter.tex
@@ -40,8 +40,12 @@
 \acro{HE}[HE]{Hadron endcap calorimeter}
 \acro{HF}[HF]{Hadron forward calorimeter}
 \acro{BSM}[BSM]{Beyond the Standard Model}
-\acro{L1}[L1]{Level 1}
+\acro{L1}[L1]{Level-1}
 \acro{HLT}[HLT]{High-level trigger}
+\acro{CSC}[CSC]{Cathode strip chambers}
+\acro{DT}[DT]{Drift tubes}
+\acro{RPC}[RPC]{Resistive plate chambers}
+\acro{DAQ}[DAQ]{Data Acquisition}
 \end{acronym}
 
 
